src/test/deca/syntax/invalid/declVar-typeWithFigures.synt
declVar-typeWithFigures.deca:2: